tests/ui/feature-gates/feature-gate-cilk.stderr
error[E0658]: cilk keywords are experimental
  --> $DIR/feature-gate-cilk.rs:2:5
   |
LL |     cilk_spawn { 5 };
   |     ^^^^^^^^^^
   |
   = help: add `#![feature(cilk)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: cilk keywords are experimental
  --> $DIR/feature-gate-cilk.rs:3:5
   |
LL |     cilk_sync;
   |     ^^^^^^^^^
   |
   = help: add `#![feature(cilk)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: cilk keywords are experimental
  --> $DIR/feature-gate-cilk.rs:4:5
   |
LL |     cilk_scope { 5 };
   |     ^^^^^^^^^^
   |
   = help: add `#![feature(cilk)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: cilk keywords are experimental
  --> $DIR/feature-gate-cilk.rs:5:5
   |
LL |     cilk_for i in 0..10 {}
   |     ^^^^^^^^
   |
   = help: add `#![feature(cilk)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
